# ask_bharat_langfuse_version

./: .env  .gitignore  README.md  chatbot.py  pyproject.toml  requirements.txt  vector_db_manager.py
evaluation_tools/: APPROACH.md  README.md  example_usage.py  integration_openai_sdk.py  run_dashboard.py  truelens-sample.py  truelens_evaluator.py
loaders/: pdf_loader.py
rag/: __init__.py  generation.py  pipeline.py  retrieval.py
tests/: __init__.py  conftest.py  test_generation.py  test_integration.py  test_pipeline.py  test_retrieval.py
utils/: embeddings.py
vector_dbs/fixed_chunking/: chroma.sqlite3
vector_dbs/hybrid_retrieval/: chroma.sqlite3
vector_dbs/reranking/: chroma.sqlite3
vector_dbs/sentence_overlap/: chroma.sqlite3
